// $Id$

SimpleTest 6.x-2.10, xxxx-xx-xx (development version)
------------------------------
- Bugs
   * Correct INSTALL.txt link URL in requirement check.
   * #587304: Call to undefined function drupal_realpath().
   * #587988: drupal_http_request() does not use drupal_generate_test_ua().
- Changes:
   * #580406: DrupalUnitTestCase requires Database class.

SimpleTest 6.x-2.9, 2009-09-14
------------------------------
- Changes:
   * #576256: Theme laying needs to be initialized during setUp().
   * Correct comment on previous workaround.
   * #400296 by neilnz: Make simpletest_get_like_tables() work in MySQL and PostgreSQL.
   * #573822: Update SimpleTestMailCaptureTestCase from simpletest.test.
   * #577324 by Dave Reid: Module tests with extending submodule tests not included correctly.
- Bugs:
   * #442890: HEAD info left in simpletest.info.
   * #474394 by RockyRoad: block.test should treat delta as string.
- Backports:
   * #335756: SimpleTest: $this->originalFileDirectory should be set before
              installation to ensure non-standard directories are picked up.
   * #567422: Fresh backport of Drupal 7 SimpleTest.
   * #545228: Missing D7 constants.
   * Remove simpletest.function.inc.
   * Correct file_scan_directory() $mask parameter API change.
   * Correct another 'class' atrribute as array().
   * Update files.
   * Changes to install.php included in D6 core patch.
   * #577496: drupal_mail_wrapper() conflicts.

SimpleTest 6.x-2.8, 2009-04-23
------------------------------
- Bugs:
   * #382334: drupalGetNodeByTitle uses node_load_multiple in 6.x.
   * #385152: Clear user_access() cache.
   * Change file in drupalGetTestFiles() to use ereg() format used in Drupal 6.
   * #430512 by soxofaan: Drupal 7 style database code in run-tests.sh.
   * #430682: backport: run-tests.sh does not work with non-default server port.
- Changes:
   * #346844: Clear language statics to remove locale module errors.